[package]

name = "rustfmt-nightly"
version = "1.4.8"
authors = ["Nicholas Cameron <ncameron@mozilla.com>", "The Rustfmt developers"]
description = "Tool to find and fix Rust formatting issues"
repository = "https://github.com/rust-lang/rustfmt"
readme = "README.md"
license = "Apache-2.0/MIT"
build = "build.rs"
categories = ["development-tools"]
edition = "2018"

[[bin]]
name = "rustfmt"
path = "src/bin/main.rs"

[[bin]]
name = "cargo-fmt"
path = "src/cargo-fmt/main.rs"

[[bin]]
name = "rustfmt-format-diff"
path = "src/format-diff/main.rs"

[[bin]]
name = "git-rustfmt"
path = "src/git-rustfmt/main.rs"

[features]
default = ["cargo-fmt", "rustfmt-format-diff"]
cargo-fmt = []
generic-smid = ["rustfmt-lib/generic-simd"]
rustfmt-format-diff = ["regex", "serde", "serde_json"]

[dependencies]
cargo_metadata = "0.8"
env_logger = "0.6"
failure = "0.1.3"
getopts = "0.2"
log = "0.4"
structopt = "0.3"
term = "0.6"

rustfmt-lib = { path = "rustfmt-lib" }

regex = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# A noop dependency that changes in the Rust repository, it's a bit of a hack.
# See the `src/tools/rustc-workspace-hack/README.md` file in `rust-lang/rust`
# for more information.
rustc-workspace-hack = "1.0.0"

[dev-dependencies]
lazy_static = "1.0.0"
