[package]

name = "rustfmt-nightly"
version = "2.0.0-rc.2"
authors = ["Nicholas Cameron <ncameron@mozilla.com>", "The Rustfmt developers"]
description = "Tool to find and fix Rust formatting issues"
repository = "https://github.com/rust-lang/rustfmt"
readme = "README.md"
license = "Apache-2.0/MIT"
build = "build.rs"
categories = ["development-tools"]
edition = "2018"

[[bin]]
name = "rustfmt"
path = "src/rustfmt/main.rs"
required-features = ["rustfmt"]

[[bin]]
name = "cargo-fmt"
path = "src/cargo-fmt/main.rs"
required-features = ["cargo-fmt"]

[[bin]]
name = "rustfmt-format-diff"
path = "src/format-diff/main.rs"
required-features = ["rustfmt-format-diff"]

[[bin]]
name = "git-rustfmt"
path = "src/git-rustfmt/main.rs"
required-features = ["git-rustfmt"]

[features]
default = ["config", "emitter"]
cargo-fmt = [
  "cargo_metadata",
   "structopt",
]

config = [
  "dirs",
  "rustfmt-config_proc_macro",
  "serde",
  "serde_json",
  "toml",
]

emitter = [
  "config",
  "diff",
  "serde",
  "serde_json",
  "term",
]

git-rustfmt = [
  "env_logger",
  "structopt",
]

rustfmt = [
  "env_logger",
  "structopt",
]

rustfmt-format-diff = [
  "env_logger",
  "serde",
  "serde_json",
  "structopt",
]

[dependencies]
annotate-snippets = { version = "0.8", features = ["color"] }
anyhow = "1.0"
bytecount = "0.6"
dunce = "1.0"
ignore = "0.4.11"
itertools = "0.8"
log = "0.4"
regex = "1.0"
thiserror = "1.0"
unicode_categories = "0.1.1"
unicode-segmentation = "1.0.0"
unicode-width = "0.1.5"

# A noop dependency that changes in the Rust repository, it's a bit of a hack.
# See the `src/tools/rustc-workspace-hack/README.md` file in `rust-lang/rust`
# for more information.
rustc-workspace-hack = "1.0.0"

cargo_metadata = { version = "0.11", optional = true }
diff = { version = "0.1", optional = true}
dirs = { version = "2.0", optional = true }
env_logger = { version = "0.7", optional = true }
rustfmt-config_proc_macro = { version = "0.5", path = "config_proc_macro", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
structopt = { version = "0.3", optional = true }
term = { version = "0.6", optional = true }
toml = { version = "0.5", optional = true }

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.0.0"

[dependencies.rustc_ast]
path = "../rust/compiler/rustc_ast"

[dependencies.rustc_ast_pretty]
path = "../rust/compiler/rustc_ast_pretty"

[dependencies.rustc_data_structures]
path = "../rust/compiler/rustc_data_structures"

[dependencies.rustc_errors]
path = "../rust/compiler/rustc_errors"

[dependencies.rustc_expand]
path = "../rust/compiler/rustc_expand"

[dependencies.rustc_parse]
path = "../rust/compiler/rustc_parse"

[dependencies.rustc_session]
path = "../rust/compiler/rustc_session"

[dependencies.rustc_span]
path = "../rust/compiler/rustc_span"