[package]
name = "rustfmt-lib"
version = "0.1.0"
authors = ["Seiichi Uchida <seuchida@gmail.com>"]
edition = "2018"
repository = "https://github.com/rust-lang/rustfmt"
license = "Apache-2.0/MIT"

[features]
generic-simd = ["bytecount/generic-simd"]

[dependencies]
itertools = "0.8"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.0.0"
regex = "1.0"
term = "0.6"
diff = "0.1"
log = "0.4"
derive-new = "0.5"
rustc-ap-rustc_target = "583.0.0"
rustc-ap-syntax = "583.0.0"
rustc-ap-syntax_pos = "583.0.0"
failure = "0.1.3"
bytecount = "0.6"
unicode-width = "0.1.5"
unicode_categories = "0.1.1"
dirs = "2.0.1"
ignore = "0.4.6"
annotate-snippets = { version = "0.6", features = ["ansi_term"] }

rustfmt-config_proc_macro = { version = "0.2", path = "../config_proc_macro" }

[dev-dependencies]
lazy_static = "1.0.0"
